envoy/front_envoy/envoy.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:8180",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "access_log": [
              {
                "path": "/tmp/envoy-ingress-traffic"
              }
            ],
            "generate_request_id": true,
            "tracing": {
              "operation_name": "ingress"
            },
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "service_in",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "auto_host_rewrite": true,
                      "cluster": "local_service"
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    },
    {
      "address": "tcp://0.0.0.0:15001",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "egress_http",
            "access_log": [
              {
                "path": "/tmp/envoy-traffic"
              }
            ],
            "generate_request_id": true,
            "tracing": {
              "operation_name": "egress"
            },
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "service",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "auto_host_rewrite": true,
                      "cluster": "httpbin_service"
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/tmp/envoy-admin",
    "address": "tcp://0.0.0.0:15000"
  },
  "tracing": {
    "http": {
      "driver": {
        "type": "zipkin",
        "config": {
          "collector_cluster": "zipkin",
          "collector_endpoint": "/api/v1/spans"
        }
      }
    }
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "httpbin_service",
        "connect_timeout_ms": 5000,
        "type": "logical_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://passthrough:8180"
          }
        ],
        "circuit_breakers": {
          "default": {
            "max_connections": 1,
            "max_pending_requests": 1,
            "max_retries": 3
          }
        },
        "outlier_detection" : {
          "consecutive_5xx": 5,
          "max_ejection_percent": 100,
          "interval_ms": 3000
        }
      },
      {
        "name": "local_service",
        "connect_timeout_ms": 250,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://127.0.0.1:8080"
          }
        ]
      },
      {
        "name": "zipkin",
        "connect_timeout_ms": 1000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://zipkin:9411"
          }
        ]
      }
    ]
  }
}
